replace ipdb with pdbpp

--- a/base.cfg
+++ b/base.cfg
@@ -37,7 +37,7 @@ blob-storage = var/blobstorage
 eggs =
     Pillow
     bda.plone.shop
-    ipdb
+    pdbpp
 
 zcml =
     bda.plone.shop
@@ -49,7 +49,7 @@ eggs = zest.releaser[recommended]
 [test]
 recipe = zc.recipe.testrunner
 eggs =
-    ipdb
+    pdbpp
     souper
     souper.plone[test]
     bda.plone.cart[test]
@@ -65,7 +65,7 @@ recipe = zc.recipe.egg
 eggs =
     ${test:eggs}
     plone.app.robotframework
-    ipdb
+    pdbpp
     plone.reload
     plone.app.debugtoolbar
     Products.PrintingMailHost
